# stm32-rust

./: Cargo.toml  README.md  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs
