[package]
authors = ["Zakhar Semenov <deadlion24@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32-rust"
version = "0.1.0"

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
#codegen-units = 1 # better optimizations
#debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies]
cortex-m = "0.6.0"
cortex-m-semihosting = "0.3.7"
cortex-m-rtic = "0.5.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
nb = "0.1.2"

[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["stm32f103", "rt", "medium"]

#[dependencies.morse]
#path="../morse/"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32-rust"
test = false
bench = false
